Implement boggle solver app requirements

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,10 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.App {
+  color: #282c34;
+  width: 60%;
+  margin: auto;
 }
